making everything 'better'

--- a/window.html
+++ b/window.html
@@ -6,6 +6,7 @@
   <head>
     <title>Classtab</title>
     <link href="window.css" rel="stylesheet" title="Default"/>
+    <script src="add-input-to-local-storage.js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="window.js"></script>
   </head>
